Fix Scrolling on Tablets

--- a/libre-2/style.css
+++ b/libre-2/style.css
@@ -621,7 +621,7 @@ textarea {
 		content: "";
 		position: absolute;
 		top: 0;
-		width: 100%;
+		width: auto;
 	}
 
 	.singular .site-header:before {
